// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PaginationList/FileExecuteMode should match snapshot 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center file-mode-title"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <span
        class="custom-icon-ellipse css-u3jcp4"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#E8F3FF"
            height="16"
            rx="3"
            width="16"
          />
          <circle
            cx="8"
            cy="8"
            fill="white"
            r="3"
            stroke="#4583FF"
            stroke-width="2"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="file-mode-title-text"
      >
        文件信息概览
      </span>
    </div>
  </div>
  <div
    class="ant-list ant-list-vertical ant-list-loading ant-list-something-after-last-item file-execute-mode-list-wrapper css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 53px;"
        />
      </div>
    </div>
    <div
      class="ant-list-pagination ant-list-pagination-align-end"
    >
      <ul
        class="ant-pagination task-result-pagination-list css-dev-only-do-not-override-txh9fw"
      >
        <li
          class="ant-pagination-total-text"
        >
          <span>
            共 0 条数据
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-options"
        >
          <div
            aria-label="Page Size"
            class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-txh9fw ant-select-single ant-select-show-arrow ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="Page Size"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  type="search"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="20 / page"
              >
                20 / page
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`test PaginationList/FileExecuteMode should match snapshot 2`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center file-mode-title"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <span
        class="custom-icon-ellipse css-u3jcp4"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#E8F3FF"
            height="16"
            rx="3"
            width="16"
          />
          <circle
            cx="8"
            cy="8"
            fill="white"
            r="3"
            stroke="#4583FF"
            stroke-width="2"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="file-mode-title-text"
      >
        文件信息概览
      </span>
    </div>
  </div>
  <div
    class="ant-list ant-list-vertical ant-list-something-after-last-item file-execute-mode-list-wrapper css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1w1lpb5"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              1
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  version="1.1"
                                  viewBox="0 0 1024 1024"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                                    fill="#4583FF"
                                  />
                                </svg>
                              </span>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/order/123/files/538/sqls"
                              >
                                create_table_if_not_exist.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-notice css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                                      fill="#6094FC"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ima1ur css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-warn css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.64875 2.75013L16.7934 15.1252C17.0005 15.4839 16.8776 15.9426 16.5189 16.1496C16.4049 16.2155 16.2756 16.2502 16.1439 16.2502H1.85449C1.44027 16.2502 1.10449 15.9144 1.10449 15.5002C1.10449 15.3685 1.13914 15.2392 1.20497 15.1252L8.34967 2.75013C8.55682 2.3914 9.01545 2.2685 9.37417 2.47561C9.48825 2.54143 9.5829 2.63611 9.64875 2.75013ZM8.24917 12.5002V14.0002H9.74917V12.5002H8.24917ZM8.24917 7.25013V11.0002H9.74917V7.25013H8.24917Z"
                                      fill="#EBAD1C"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1w1lpb5"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              2
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  version="1.1"
                                  viewBox="0 0 1024 1024"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                                    fill="#4583FF"
                                  />
                                </svg>
                              </span>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/order/123/files/539/sqls"
                              >
                                create_table_roll_back.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-notice css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                                      fill="#6094FC"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1w1lpb5"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              3
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  version="1.1"
                                  viewBox="0 0 1024 1024"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                                    fill="#4583FF"
                                  />
                                </svg>
                              </span>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/order/123/files/540/sqls"
                              >
                                new_folder/create_table_if_not_exist.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-notice css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                                      fill="#6094FC"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ima1ur css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-warn css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.64875 2.75013L16.7934 15.1252C17.0005 15.4839 16.8776 15.9426 16.5189 16.1496C16.4049 16.2155 16.2756 16.2502 16.1439 16.2502H1.85449C1.44027 16.2502 1.10449 15.9144 1.10449 15.5002C1.10449 15.3685 1.13914 15.2392 1.20497 15.1252L8.34967 2.75013C8.55682 2.3914 9.01545 2.2685 9.37417 2.47561C9.48825 2.54143 9.5829 2.63611 9.64875 2.75013ZM8.24917 12.5002V14.0002H9.74917V12.5002H8.24917ZM8.24917 7.25013V11.0002H9.74917V7.25013H8.24917Z"
                                      fill="#EBAD1C"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1w1lpb5"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              4
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  version="1.1"
                                  viewBox="0 0 1024 1024"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                                    fill="#4583FF"
                                  />
                                </svg>
                              </span>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/order/123/files/541/sqls"
                              >
                                new_folder/create_table_roll_back.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-notice css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                                      fill="#6094FC"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1w1lpb5"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              5
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  version="1.1"
                                  viewBox="0 0 1024 1024"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                                    fill="#4583FF"
                                  />
                                </svg>
                              </span>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/order/123/files/542/sqls"
                              >
                                new_folder/in_folder/create_table_if_not_exist.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-notice css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                                      fill="#6094FC"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ima1ur css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-warn css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.64875 2.75013L16.7934 15.1252C17.0005 15.4839 16.8776 15.9426 16.5189 16.1496C16.4049 16.2155 16.2756 16.2502 16.1439 16.2502H1.85449C1.44027 16.2502 1.10449 15.9144 1.10449 15.5002C1.10449 15.3685 1.13914 15.2392 1.20497 15.1252L8.34967 2.75013C8.55682 2.3914 9.01545 2.2685 9.37417 2.47561C9.48825 2.54143 9.5829 2.63611 9.64875 2.75013ZM8.24917 12.5002V14.0002H9.74917V12.5002H8.24917ZM8.24917 7.25013V11.0002H9.74917V7.25013H8.24917Z"
                                      fill="#EBAD1C"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="css-1w1lpb5"
            >
              <div
                class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost file-result-collapse-wrapper css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-collapse-item"
                >
                  <div
                    aria-disabled="false"
                    aria-expanded="false"
                    class="ant-collapse-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="ant-collapse-expand-icon"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      class="ant-collapse-header-text"
                    >
                      <div
                        class="file-result-card-wrapper result-card-header"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <span
                              class="number"
                            >
                              #
                              6
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="file-info"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="none"
                                  height="18"
                                  version="1.1"
                                  viewBox="0 0 1024 1024"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3z m0 0M815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3z m0 0"
                                    fill="#4583FF"
                                  />
                                </svg>
                              </span>
                              <a
                                class="file-info-name"
                                href="/sqle/project/700300/order/123/files/543/sqls"
                              >
                                new_folder/in_folder/create_table_roll_back.sql
                              </a>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-du2j3a css-dev-only-do-not-override-txh9fw"
                              >
                                <span
                                  class="custom-icon custom-icon-level-notice css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M11.9513 2.37573L16.125 6.54946V12.452L11.9513 16.6257H6.04873L1.875 12.452V6.54946L6.04873 2.37573H11.9513ZM8.24948 11.7501V13.2501H9.74948V11.7501H8.24948ZM8.24948 5.75018V10.2501H9.74948V5.75018H8.24948Z"
                                      fill="#6094FC"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  2
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-pagination ant-list-pagination-align-end"
    >
      <ul
        class="ant-pagination task-result-pagination-list css-dev-only-do-not-override-txh9fw"
      >
        <li
          class="ant-pagination-total-text"
        >
          <span>
            共 6 条数据
          </span>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-options"
        >
          <div
            aria-label="Page Size"
            class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-txh9fw ant-select-single ant-select-show-arrow ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="Page Size"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  type="search"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="20 / page"
              >
                20 / page
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
